# bitch.desktop

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  README.md  commitlint.config.cjs  config.example.yaml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.component.config.ts  vitest.unit.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: validation.yml
.husky/: pre-commit
.zed/: settings.json
docs/: ARCHITECTURE.md  README.md  app-shell.md  backend-revamp.md  devlog.md  hermes-remote-files.md  http-bridge.md  interactive-prompts.md  live-thread-preservation.md  message-thread.md  remote-profile-support.md  rich-composer.md  roadmap.md  session-sidebar.md  testing.md  ui-componentization-audit.md  upstream-sync.md
docs/calendar/: caldav.md
docs/hermes/: README.md  http-bridge.md  interactive-prompts.md  live-conversation-preservation.md  live-thread-preservation.md  message-conversation.md  message-thread.md  personal-glyphs.md  remote-files.md  remote-profile-support.md  rich-composer.md  session-sidebar.md
docs/monitoring/: beszel.md
docs/plans/: 00-overview.md  01-tauri-http-bridge.md  02-app-shell-and-routing.md  04-message-thread.md  07-deferred-features.md  roadmap.md  (+1 more)
plugin/: README.md
scripts/: check-source-contracts.mjs  dev-local.sh  generate-glyph-icon.mjs  hermes-upstream-sync.json  install.mjs  rust-wrapper.sh  setup-rust-local.sh  sync-hermes-transport.sh  sync-hermes-upstream.mjs
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  http.rs  lib.rs  main.rs  updater.rs
src-tauri/src/calendar/: caldav.rs  config.rs  mod.rs  sync.rs
src-tauri/src/commands/: calendar.rs  config.rs  dashboard.rs  gateway.rs  mod.rs  monitoring.rs  platform.rs  updater.rs
src-tauri/src/hermes/: auth.rs  config.rs  dashboard_http.rs  files.rs  gateway_ws.rs  mod.rs  session_auth.rs
src-tauri/src/monitoring/: auth.rs  beszel.rs  config.rs  mod.rs
src-tauri/src/platform/: app_icon.rs  external_url.rs  mod.rs  notifications.rs  window.rs
(+497 files in other folders)
