[package]
name = "bitch"
version = "0.1.0"
description = "BITCH Desktop"
authors = ["liempo"]
edition = "2021"

[lib]
name = "bitch_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
